# space-traders-automation

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.prod  README.md
src/: CMakeLists.txt  main.cpp
src/automation/: CMakeLists.txt  ship_auto.cpp  ship_auto.h
src/data_layer/: CMakeLists.txt  data_access.cpp  data_access.h  error.cpp  error.h  schema.cpp  schema.h
